# estimatapp

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  main.py  opencode.json  pyproject.toml  render.yaml  requirements.txt
.atl/: .skill-registry.cache.json  skill-registry.md
app/: __init__.py  main.py  manager.py  websocket.py
app/application/: __init__.py
app/application/dto/: __init__.py
app/application/use_cases/: __init__.py  room_use_cases.py  voting_use_cases.py
app/domain/: __init__.py
app/domain/aggregates/: __init__.py  room.py
app/domain/entities/: __init__.py  enums.py  player.py  story.py
app/domain/repositories/: __init__.py  room_repository.py
app/domain/services/: __init__.py
app/domain/value_objects/: __init__.py  identifiers.py  voting.py
app/infrastructure/: __init__.py
app/infrastructure/auth/: __init__.py  jwt_validator.py
app/infrastructure/database/: __init__.py  connection.py
app/infrastructure/repositories/: __init__.py  in_memory_room_repository.py  postgres_room_repository.py
app/infrastructure/web/: __init__.py  connection_manager.py
app/models/: __init__.py  poker.py
app/routes/: __init__.py  rooms.py  websocket.py
app/static/: home.js  room.js  styles.css  styles_old.css
app/templates/: index.html  room.html
openspec/: config.yaml
supabase/migrations/: 00001_initial_schema.sql
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_auth_integration.py  test_postgres_round_trip.py  test_websocket.py  test_ws_auth.py
tests/unit/: test_connection_manager.py  test_manager.py  test_player.py  test_room.py  test_story.py  test_value_objects.py  test_voting.py
(+14 files in other folders)
