[project]
name = "estimatapp"
version = "0.1.0"
description = "Scrum Poker application for agile estimation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "jinja2>=3.1.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/models/poker.py",  # C칩digo legacy, ser치 eliminado
    "app/application/use_cases/*",  # Casos de uso para futura implementaci칩n DDD
    "app/application/dto/*",  # DTOs para futura implementaci칩n
    "app/routes/websocket.py",  # Handlers WebSocket - requieren tests E2E
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T10", "ISC", "ICN", "PIE", "PT", "RET", "SIM", "ARG", "PTH", "PL", "RUF"]
ignore = ["ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",  # Magic values son aceptables en tests
    "PLC0415",  # Imports dentro de funciones son aceptables en tests
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
